--- a/Dev2AssessorApp/Src/AssessmentScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/AssessmentScreen.fx.yaml
@@ -2043,7 +2043,8 @@ AssessmentScreen As screen:
                                                 "quantum_checkpointitemimagesid",
                                                 "shlaf_image_annotation",
                                                 "quantum_image",
-                                                "shlaf_imagesortsequence"
+                                                "shlaf_imagesortsequence",
+                                                "cr074_imagesize"
                                             )
                                         );
                                         
